@@ -9,9 +9,8 @@ files[] = src/SearchApiAutocompleteSuggesterInterface.php
 files[] = src/SearchApiAutocompleteSuggesterPluginBase.php
 files[] = src/SearchApiAutocompleteServerSuggester.php
 
-; Information added by Drupal.org packaging script on 2017-07-18
-version = "7.x-1.5"
+; Information added by Drupal.org packaging script on 2018-09-17
+version = "7.x-1.6"
 core = "7.x"
 project = "search_api_autocomplete"
-datestamp = "1500368062"
-
+datestamp = "1537171388"
