@@ -8,24 +8,36 @@
 
 (function ($) {
 
-  function strip(html)
-  {
-   var tmp = document.createElement("DIV");
-   tmp.innerHTML = html;
-   return tmp.textContent || tmp.innerText || "";
+  function sanitizeHTML(str) {
+    return $("<div>").html(str).text();
+  }
+
+  //Escape characters in html terms.
+  function escapeHtml(text) {
+    return text
+      .replace(/&/g, "&amp;")
+      .replace(/</g, "&lt;")
+      .replace(/>/g, "&gt;")
+      .replace(/"/g, "&quot;");
+  }
+  
+  // Escape characters in pattern before creating regexp.
+  function escapeRegExp(str) {
+    str = $.trim(str);
+    return str.replace(/[\-\[\]\/\{\}\(\)\*\+\?\.\\\^\$\|]/g, "\\$&");
   }
 
   // Autocomplete
   $.ui.autocomplete.prototype._renderItem = function (ul, item) {
-    var term = this.term;
+    var term = escapeHtml(this.term);
     var first = ("group" in item)  ? 'first' : '';
     var innerHTML = '<div class="ui-autocomplete-fields ' + first + '">';
-    item.value = strip(item.value);
-    item.label = Drupal.checkPlain(item.label);
+    item.value = sanitizeHTML(item.value);
+    item.label = sanitizeHTML(item.label);
     if (item.fields) {
       $.each(item.fields, function(key, value) {
-        var regex = new RegExp('(' + $.trim(term) + ')', 'gi');
-        var output = Drupal.checkPlain(value);
+        var regex = new RegExp('(' + escapeRegExp(term) + ')', 'gi');
+        var output = sanitizeHTML(value);
         if (value.indexOf('src=') == -1 && value.indexOf('href=') == -1) {
           output = output.replace(regex, "<span class='ui-autocomplete-field-term'>$1</span>");
           innerHTML += ('<div class="ui-autocomplete-field-' + key + '">' + output + '</div>');
@@ -111,6 +123,7 @@
 		                  $(this).val(ui.item.value);
 		                  $(this).closest("form").submit();
 		              }
+                  $(this).val(sanitizeHTML(ui.item.value));
 		            },
 		            focus: function (event, ui) {
 		              if (typeof ui.item.group != 'undefined') {
