@@ -6,9 +6,8 @@ files[] = views/plugins/search_autocomplete.views_plugin_style.inc
 dependencies[] = views
 configure = admin/config/search/search_autocomplete
 
-; Information added by Drupal.org packaging script on 2015-10-04
-version = "7.x-4.7"
+; Information added by Drupal.org packaging script on 2018-10-20
+version = "7.x-4.9"
 core = "7.x"
 project = "search_autocomplete"
-datestamp = "1443949741"
-
+datestamp = "1540045984"
